--- a/pages/mx_zhifu/mx_zhifu.wxml
+++ b/pages/mx_zhifu/mx_zhifu.wxml
@@ -1,84 +1,61 @@
-
-<!--新版支付-->
-<view class='container'>
-  <view class='page-header' style='background:##f1f4f7;height:10px'></view>
-  <view class='page-body'>
-    <view class="page-section wm_box">
-      <view class='flex-item wm_header'>
-        <view class='wm_menxiang'>{{pool.ptitle}}</view>
-        <view class='wm_time'>距离结束
-          <text class='timer'>{{cd.h}}</text>
-          <text style='padding-left:2px;padding-right:2px'>:</text>
-          <text class='timer'>{{cd.m}}</text>
-          <text style='padding-left:2px;padding-right:2px'>:</text>
-          <text class='timer'>{{cd.s}}</text>
+<!--UI v1.1 版本-->
+<!--支付详情页面-->
+<!-- 
+    share：分享
+    copies_money：份数
+    dream：选择梦想
+    price：单价
+    wxPay：微信支付按钮
+    （其余和首页类名相同）
+ -->
+<view class='payInfo home'>
+    <view class='home_content'>
+        <view class='dream_info'>
+            <view class='dream_title'>{{pool.ptitle}}</view>
+            <button id="{{pool.ptitle}}" open-type='share' plain='true' class='share' style='border:none'></button>
+            <view class='progress'>
+                <canvas class='circle' style='z-index:-5;width:100%;height:100%' canvas-id='bottom'></canvas>
+                <canvas class='circle' style='width:100%;height:100%' canvas-id='top'></canvas>
+                <view class='timeout'>
+                    <view class='icon_clock'></view>
+                    <text class='timeout_ui'>{{cd.h}}:{{cd.m}}:{{cd.s}}</text>
+                </view>
+                <view class='help_money'><text>{{pool.realBill}}</text><text style='font-size:13px'>{{pool.unit}}</text></view>
+                <view class='present_money'>{{pool.billHint}}</view>
+            </view>
+            <view class='targetAndPrice'>
+                <view class='target'>
+                    <view class='target_money'>{{pool.realBill}}{{pool.unit}}</view>
+                    <view class='target_tip'>互助目标</view>
+                </view>
+                <view class='target copies'>
+                    <view class='copies_money'>
+                      <view id='-1' class='icon_add' catchtap='onChangePiece'></view>
+                      <text>{{countPiece}}</text>
+                      <view id='1' class='icon_incer' catchtap='onChangePiece'></view>
+                      </view>
+                    <view class='copies_tip'>份数</view>
+                </view>
+                <view class='target price dream'>
+                    <view class='dream' bindtap='exchangeDream01'>{{dream.title}}<view class='icon_select'></view></view>
+                    <view class='dream_tip'>选择梦想</view>
+                </view>
+            </view>
+            <view class='price'>{{pool.rubill}}元/份 结算：<text>{{countPiece*pool.rubill}}元</text></view>
+            <button catchtap='onPay' class='join_help wxPay' >微信支付</button>
         </view>
-      </view>
-       <view class='wm_body'>
-       <!-- 从金额开始 -->
-        <view class='bloc' style='margin:0 auto'>
-          <text class='bloc' ><text class='color_red'>{{pool.realBill}}</text>{{pool.unit}} </text>
-        </view>
-         <view class='bloc' style='margin:0 auto'>
-          <text class='bloc' >{{pool.billHint}}</text>
-        </view>
-        <view class='col' style='padding:13px 0px'>
-          <view class='col-5' style='text-align:center'>
-            <text>互助目标<text class='col_red'>{{pool.rtbill.value}}</text>{{pool.rtbill.unit}}</text>
-          </view>
-          <view class='col-3' style='text-align:center'>
-            <text>时限{{pool.day}}天</text>
-          </view>
-          <view class='col-3' style='text-align:center'>
-            <text><text class='col_red'>{{pool.rubill}}</text>元/份</text>
-          </view>
-           <view catchtap='sharePool' class='col-2'>
-      <button id="{{pool.ptitle}}" open-type='share'  style='background-image:url("http://cloud.antit.top/share.png");background-size:100%;width:35px;height:35px;border:none'  plain='true'></button>
-      </view>
-        </view>
-       </view>
-      <!-- 结束 -->
-       
-      </view>
-        <!-- 份数 -->
-      <view class='box_fenshu row'>
-       <view class='col'>
-        <view class='col-6'>份数</view>
-        <view class='col-6'>
-         <text id="-1" bindtap='onChangePiece' class='jian' >-</text>
-         <text class='fenshu'>{{countPiece}}</text>
-         <text id="1" bindtap='onChangePiece' class='jia'>+</text>
-         <!-- <text class='bloc' style='margin:0px auto;color:#888;text-align:center;margin-top:10px'>每人每日最多参与5份</text> -->
-         </view>
-       <!-- <view class='col'>
-         <text >每人每日最多参与5份</text>
-       </view> -->
-       </view>
-      </view>
-      <view class=' row' style='margin:0 10px;background:white;text-align:center;padding:5px 0px'>
-        <view class='col'>
-         <view class='col-6'></view>
-          <view class='col-6' style='color:#888'>每人每日最多参与5份</view>
-        </view>
-      </view>
-
-       <!-- 总价 -->
-      <view class='box_zongji row'>
-       <view class='col'>
-        <view class='col-6'></view>
-        <view class='col-6'>
-        <text class='zongji'>共<text class='price'>{{countPiece*pool.rubill}}</text>元</text>
-        </view>
-       </view>
-      </view>
-      <view class='box_mengxiang row'>
-        <view class='col'>
-          <text class='col-3'>梦想</text>
-          <text class='col-6'>{{dream.title}}</text>
-          <text class='col-3 tihuan' bindtap='exchangeDream01'>替换</text>
-        </view>
-      </view>
-      <view class='flex-item box_zhifu'><button bindtap='onPay'  style='color:white;background:#3fab79;width:80%;border-radius:5px'>微信支付</button></view>
-  </view>
+    </view>
+    <cover-view class='mask' wx:if="{{ishide}}">
+        <cover-view class='mask_bg'>
+            <cover-image class='icon_success' src='http://tdream.antit.top/image/stars.png'></cover-image>
+            <cover-view class='tip'>
+                您已成功参与20181227期小梦想互助
+            </cover-view>
+            <cover-view class='notice'>
+               您的编号为：2819281、81917917、7917917赶紧邀请小伙伴们一起来参加小梦想互助吧！
+            </cover-view>
+            <button>邀 请</button>
+        </cover-view>
+        <cover-image class='close' src='http://tdream.antit.top/image/close.png' bindtap='close'></cover-image>
+    </cover-view>
 </view>
-<!--新版支付结束-->
