增加通知页面及切换
Signed-off-by: konglf2112 <konglf2112@foxmail.com>

--- a/pages/mx_wode/mx_wode.wxml
+++ b/pages/mx_wode/mx_wode.wxml
@@ -46,7 +46,7 @@
                 </view>
             </view>
             <view class='block'>
-                <view class='block_main'>
+                <view class='block_main' bindtap='notice'>
                     <view class='icon_notice icon'></view>
                     <text>系统通知</text>
                 </view>
