--- a/pages/mx_jinxing/mx_jinxing.wxml
+++ b/pages/mx_jinxing/mx_jinxing.wxml
@@ -45,8 +45,8 @@
             </view>
             <view class='right'>
                 <view class='above'>
-                 <canvas class='circle' canvas-id='bottom-{{pool.pid}}' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
-                 <canvas class='circle' canvas-id='top-{{pool.pid}}' style='width:170rpx;height:170rpx;'></canvas>
+                 <!--canvas class='circle' canvas-id='bottom-{{pool.pid}}' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
+                 <canvas class='circle' canvas-id='top-{{pool.pid}}' style='width:170rpx;height:170rpx;'></canvas-->
                  <view class='progress'>{{pool.percentVal}}%</view>
                 </view>
                 <button id="{{pool.pid}}" catchtap="onPoolControl" class='under'>{{pool.btnText}}</button>
@@ -77,8 +77,8 @@
               </view>
               <view class='right'>
                   <view class='above'>
-                  <canvas class='circle' canvas-id='bottom-{{pool.pid}}' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
-                    <canvas class='circle' canvas-id='top-{{pool.pid}}' style='width:170rpx;height:170rpx;'></canvas>
+                  <!--canvas class='circle' canvas-id='bottom-{{pool.pid}}' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
+                    <canvas class='circle' canvas-id='top-{{pool.pid}}' style='width:170rpx;height:170rpx;'></canvas-->
                   <view class='progress'>{{pool.percentVal}}%</view>
                   </view>
                   <button class='under'>{{pool.btnText}}</button>
