--- a/pages/mx_zhongjiang/mx_zhongjiang.wxss
+++ b/pages/mx_zhongjiang/mx_zhongjiang.wxss
@@ -1,23 +1,383 @@
-/* pages/mx_zhongjiang/mx_zhongjiang.wxss */
-/*.box_huzhu{background: white;margin: 15px;border-radius: 10px;padding-bottom: 10px}
-.wm_time{text-align: center;font-size: 30rpx;padding: 5px 5px 5px 5px; }
-.timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
-.mx_kefu{font-size: 30rpx;text-decoration: underline;color: #5ecd98;text-align: center;padding: 5px}
-.box_list{padding: 10px 0px 10px 0px}
-.color_green{color: #0cc66d}
-.color_grey{color: #a0a0a0}
-.color_redk{color: #e60012}
-.list_zhankai{color:#5ecd98;text-decoration: underline }
-.box_list{padding: 10px 0px 10px 0px;text-align: center;overflow: hidden;text-overflow: ellipsis;border-bottom: solid thin #d1d1d1;}
-/* .list_jieshao{overflow: hidden;text-overflow: ellipsis;} */
-/*.box_list .col .text{overflow: hidden;text-overflow: ellipsis;}*/
-/* pages/xiangqingye(new)/xiangqingye(new).wxss */
+.home_end{
+    border-top: 2rpx solid #eddddd;
+    background: #fff;
+}
+.home_end .home_content{
+    background: #fff;
+}
+.home_end .home_content .end .title{
+    margin-top: 40rpx;
+    font-size: 32rpx;
+    color: #4c4c4c;
+    margin-bottom: 30rpx;
+}
+.home_end .home_content .end .dream_info{
+    width: 100%;
+    min-height: 235rpx;
+    box-shadow: 2rpx 0rpx 10rpx 2rpx rgba(0, 54, 208, .1),-2rpx 0 10rpx 2rpx rgba(0, 54, 208, .1),0 2rpx 10rpx 2rpx rgba(0, 54, 208, .1),0 -2rpx 10rpx 2rpx rgba(0, 54, 208, .1);
+    border-radius: 10rpx;
+}
+.home_end .home_content .end .dream_info .box_info{
+    width: 630rpx;
+    margin: 0 auto;
+    padding-top: 40rpx;
+    /* overflow: hidden; */
+    height: 350rpx;
+    position: relative;
+}
+.home_end .home_content .end .dream_info .box_info .left{
+    float: left;
+}
+.home_end .home_content .end .dream_info .box_info .left .money{
+    font-size: 28rpx;
+    color: #808080;
+    margin-bottom: 25rpx;
+}
+.home_end .home_content .end .dream_info .box_info .left .money_txt{
+    font-size: 92rpx;
+    color: #ffc057;
+    margin-bottom: 15rpx;
+}
+.home_end .home_content .end .dream_info .box_info .left .lucky{
+    font-size: 28rpx;
+    color: #808080;
+    margin-bottom: 10rpx;
+}
+.home_end .home_content .end .dream_info .box_info .left .lucky text{
+    color: #00d094;
+    font-size: 30rpx;
+}
+.home_end .home_content .end .dream_info .box_info .left .endTime{
+    font-size: 24rpx;
+    color: #b2b2b2;
+    padding-bottom: 30rpx;
+}
+.home_end .home_content .end .dream_info .box_info .right{
+    float: right;
+    position: absolute;
+    right: 0;
+}
+.home_end .home_content .end .dream_info .box_info .right .price{
+    font-size: 28rpx;
+    color: #808080;
+    margin-bottom: 40rpx;
+}
+.home_end .home_content .end .dream_info .box_info .right .look_info{
+    width: 234rpx;
+    height: 78rpx;
+    line-height: 78rpx;
+    background-color: #00d094;
+    color: #fff;
+    text-align: center;
+    font-size: 30rpx;
+    border-top-left-radius: 39rpx;
+    border-bottom-left-radius: 39rpx;
+    position: absolute;
+    right: -30rpx;
+}
 
-page{background: #f1f4f7}
-.box_huzhu{margin: 10px;background: white;border-radius: 10px;padding: 10px}
-.huzhu_box{text-align:center;font-size:14px;padding:7px 0px}
-.timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
-.menu{text-align: center}
-.box_list{margin:10px;text-align:center}
-.box_li{margin:0px 5px;color:#58d18e;border-radius:10px;background:white;padding:10px 0px}
-.list_zhankai{color:#5ecd98;text-decoration: underline }
+.home_end .home_content .end{
+    width: 690rpx;
+    margin: 0 auto;
+}
+/* tab切换--样式处理 */
+.home_end .home_content .tab{
+    width: 466rpx;
+    background-color: #fff;
+    margin: 94rpx auto 0;
+    overflow: hidden;
+    font-size: 32rpx;
+}
+.home_end .home_content .tab view.left{
+    float: left;
+    padding-bottom: 20rpx;
+    color: #808080;
+}
+.home_end .home_content .tab view.right{
+    float: right;
+    padding-bottom: 20rpx;
+     color: #808080;
+}
+.home_end .home_content .tab view.active{
+    border-bottom: 2rpx solid #00d094;
+    color: #00d094;
+}
+.home_end .tabBox{
+    background-color: #f0f0f0;
+}
+.home_end .tabBox .tip{
+    padding-top: 60rpx;
+    font-size: 28rpx;
+    color: #808080;
+    text-align: center;
+}
+.home_end .tabList{
+    width: 690rpx;
+    margin:0 auto;
+    margin-top: 30rpx;
+    overflow: hidden;
+}
+.home_end .tabList .number{
+    width: 330rpx;
+    height: 68rpx;
+    line-height: 68rpx;
+    border-radius: 34rpx;
+    float: left;
+    margin-right: 20rpx;
+    font-size: 28rpx;
+    background-color: #ffc057;
+    color: #fff;
+    margin-top: 30rpx;
+    text-align: center;
+}
+.home_end .tabList .number:nth-child(2n){
+    margin-right: 0;
+}
+.home_end .user_number{
+    width: 100%;
+    background-color: #f0f0f0;
+}
+.home_end .user_number .user{
+    width: 638rpx;
+    margin: 0 auto;
+    padding-top: 30rpx;
+    overflow: hidden;
+}
+.home_end .user_number .user view{
+    float: left;
+    font-size: 26rpx;
+}
+.home_end .user_number .user view.phone{
+    margin-right: 50rpx;
+}
+.home_end .user_number .user view.num{
+    margin-right: 50rpx;
+}
+.home_end .user_number .user view.title{
+    float: right;
+}
+
+
+
+
+
+
+/**详情样式表**/
+/* 梦想互助池--样式处理 */
+page{
+    background: #f0f0f0;
+}
+.home{
+    border-top: 2rpx solid #eddddd;
+    background: #fff;
+}
+.home .home_content{
+    width: 690rpx;
+    margin: 0 auto;
+    background-color: #fff;
+}
+.home .home_content .dream_info{
+    width: 100%;
+    margin-top: 20rpx;
+    border-radius: 10rpx;
+    box-shadow: 2rpx 0rpx 10rpx 2rpx rgba(0, 54, 208, .1),-2rpx 0 10rpx 2rpx rgba(0, 54, 208, .1),0 2rpx 10rpx 2rpx rgba(0, 54, 208, .1),0 -2rpx 10rpx 2rpx rgba(0, 54, 208, .1);
+    height: 800rpx;
+    text-align: center;
+}
+.home .home_content .dream_info .dream_title{
+    margin-left: 30rpx;
+    padding-top: 30rpx;
+    font-size: 32rpx;
+    text-align: left;
+}
+.home .home_content .dream_info .progress{
+    margin-top: 50rpx;
+    margin-left: 150rpx;
+    width: 380rpx;
+    height:380rpx;
+    position: relative;
+}
+.home .home_content .dream_info .progress .circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.home .home_content .dream_info .progress .timeout{
+    position: absolute;
+    top: 105rpx;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.home .home_content .dream_info .progress .timeout .icon_clock{
+    width: 23rpx;
+    height:23rpx;
+    background: url(http://tdream.antit.top/image/clock.png) no-repeat;
+    background-size: 23rpx 23rpx;
+    margin-right: 10rpx;
+    display: inline-block;
+}
+.home .home_content .dream_info .progress .timeout .timeout_ui{
+    font-size: 28rpx;
+    color: #00d094;
+    display: inline-block;
+}
+.home .home_content .dream_info .progress .help_money{
+    position: absolute;
+    top: 150rpx;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 65rpx;
+    color: #ffc057;
+}
+.home .home_content .dream_info .progress .present_money{
+    position: absolute;
+    bottom: 100rpx;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24rpx;
+    color: #999;
+}
+.home .home_content .dream_info .targetAndPrice{
+    width: 600rpx;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-top: 40rpx;
+}
+.home .home_content .dream_info .targetAndPrice .target{
+    float: left;
+}
+.home .home_content .dream_info .targetAndPrice .target.center_award{
+    margin-left: 90rpx;
+}
+.home .home_content .dream_info .targetAndPrice .target.center_award .target_money{
+    font-size: 13px;
+    color: #00d094;
+    margin-bottom: 10rpx;
+    display: block;
+    text-align: center;
+}
+.home .home_content .dream_info .targetAndPrice .target.center{
+    margin-left: 135rpx;
+}
+.home .home_content .dream_info .targetAndPrice .target .target_money,.home .home_content .dream_info .targetAndPrice .price .price_money{
+    font-size: 13px;
+    color: #00d094;
+    margin-bottom: 10rpx;
+    display: block;
+    text-align: center;
+}
+.home .home_content .dream_info .targetAndPrice .target .target_tip,.home .home_content .dream_info .targetAndPrice .price .price_tip{
+    font-size: 24rpx;
+    color: #999;
+    display: block;
+}
+.home .home_content .dream_info .targetAndPrice .price{
+    float: right;
+}
+/* 参与互助--样式处理 */
+.home .home_content .dream_info .join_help::after{
+    border:none;
+}
+.home .home_content .dream_info .join_help{
+    width: 600rpx;
+    margin: 0 auto 0;
+    position: relative;
+    top: 34rpx;
+    height: 78rpx;
+    line-height: 78rpx;
+    background-color: #00d094;
+    border-radius: 39rpx;
+    font-size: 42rpx;
+    color: #fff; 
+}
+.home .home_content .dream_info .tip_msg{
+    font-size: 20rpx;
+    color: #999;
+    position: relative;
+    top: 25rpx;
+}
+.home .home_content .issue{
+    float: right;
+    font-size: 30rpx;
+    color:#595959;
+    text-decoration: underline;
+    margin-top: 25rpx;
+}
+/* tab切换--样式处理 */
+.home .home_content .tab{
+    width: 466rpx;
+    background-color: #fff;
+    margin: 94rpx auto 0;
+    overflow: hidden;
+    font-size: 32rpx;
+}
+.home .home_content .tab view.left{
+    float: left;
+    padding-bottom: 20rpx;
+    color: #808080;
+}
+.home .home_content .tab view.right{
+    float: right;
+    padding-bottom: 20rpx;
+     color: #808080;
+}
+.home .home_content .tab view.active{
+    border-bottom: 2rpx solid #00d094;
+    color: #00d094;
+}
+.home .tabBox{
+    background-color: #f0f0f0;
+}
+.home .tabBox .tip{
+    padding-top: 60rpx;
+    font-size: 28rpx;
+    color: #808080;
+    text-align: center;
+}
+.home .tabList{
+    width: 690rpx;
+    margin:0 auto;
+    margin-top: 30rpx;
+    overflow: hidden;
+}
+.home .tabList .number{
+    width: 330rpx;
+    height: 68rpx;
+    line-height: 68rpx;
+    border-radius: 34rpx;
+    float: left;
+    margin-right: 20rpx;
+    font-size: 28rpx;
+    background-color: #ffc057;
+    color: #fff;
+    margin-top: 30rpx;
+    text-align: center;
+}
+.home .tabList .number:nth-child(2n){
+    margin-right: 0;
+}
+.home .user_number{
+    width: 100%;
+    background-color: #f0f0f0;
+}
+.home .user_number .user{
+    width: 638rpx;
+    margin: 0 auto;
+    padding-top: 30rpx;
+    overflow: hidden;
+}
+.home .user_number .user view{
+    float: left;
+    font-size: 26rpx;
+}
+.home .user_number .user view.phone{
+    margin-right: 50rpx;
+}
+.home .user_number .user view.num{
+    margin-right: 50rpx;
+}
+.home .user_number .user view.title{
+    float: right;
+}
+
+
